aula2511/calc/library.h

#ifndef CALC_LIBRARY_H
#define CALC_LIBRARY_H

int soma(int a, int b);

int subtracao(int a, int b);

int multiplicacao(int a, int b);

int divisao(int a, int b);

#endif //CALC_LIBRARY_H